log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-get-data-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-get-data
  template:
    metadata:
      labels:
        app: log-get-data
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
      containers:
        - name: log-data
          image: ushakiran369/log-data:v2
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app
        - name: get-data
          image: ushakiran369/get-data:v2
          ports:
            - containerPort: 9080
          volumeMounts:
            - name: shared-data
              mountPath: /usr/src/app
