log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-get-data-dep-svc
spec:
  type: ClusterIP
  selector:
    app: log-get-data
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 9080
